<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutDeveloperActivity">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:text="About Developer"
        android:textColor="#1586DA"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="30dp"
        app:cardCornerRadius="3dp"
        android:layout_below="@+id/textView9"
        android:layout_height="wrap_content" >


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center_horizontal"
                        app:srcCompat="@drawable/profile" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="30dp"
                        android:text="@string/name_sujeet_thakur"
                        android:textColor="#000000"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/email_sujeetcs069_gmail_com"
                        android:textColor="#000000"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/qualification_b_tech_in_cse"
                        android:textColor="#000000"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textVi9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/skills_android_app_developement_wordpress_machine_learning_data_structure_java_kotlin_python_web_development_etc"
                        android:textColor="#000000"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textVi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:clickable="true"
                        android:linksClickable="true"
                        android:text="@string/linkedin_profile_https_www_linkedin_com_in_sujeet_thakur_0aa492180"
                        android:textColor="#000000"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>
</RelativeLayout>